tests/compile_fail/repeated_file.stderr
error: The `file` attribute with value `abc` is repeated with another field.
  --> $DIR/repeated_file.rs:10:9
   |
10 |     pub name2: bool,
   |         ^^^^^
